# css-module-explainer

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .vscodeignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  oxfmt.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rolldown.config.ts  tsconfig.base.json  tsconfig.json  vitest.config.ts
.changeset/: README.md  codelens-refresh.md  config.json  fast-daemon-hotfix.md  ts-path-aliases.md
.github/: pull_request_template.md
.github/workflows/: changeset-required.yml  checker-release-gate-shadow.yml  ci.yml  publish-extension.yml  release-plan.yml  release.yml  rust-selected-query-default-candidate.yml  ts7-phase-a-shadow.yml  tsgo-operational-shadow.yml
client/: package.json  tsconfig.json
client/src/: extension.ts  lsp-server-runtime-config.ts  type-fact-backend-config.ts
docs/: architecture-v3.md  code-philosophy.md  engine-input-producers-split.md  package-boundaries.md  path-alias-migration.md  release-3.0-alpha-plan.md
docs/clients/: neovim.md  zed.md
examples/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
examples/plugin-consumers/: README.md  eslint.config.mjs  package.json  stylelint.config.mjs
examples/src/: App.tsx  app.css  main.tsx  vite-env.d.ts
rust/: Cargo.toml  rust-toolchain.toml  rustfmt.toml
rust/crates/engine-input-producers/: Cargo.toml  README.md
rust/crates/engine-input-producers/src/: expression_domain.rs  expression_semantics.rs  lib.rs  query_plan.rs  selector_usage.rs  semantic.rs  source_resolution.rs  source_side.rs  test_support.rs  type_facts.rs
rust/crates/engine-shadow-runner/: Cargo.toml
rust/crates/engine-shadow-runner/src/: main.rs
rust/crates/engine-style-parser/: Cargo.toml  README.md
rust/crates/engine-style-parser/src/: lib.rs
rust/crates/omena-abstract-value/: Cargo.toml  README.md
rust/crates/omena-abstract-value/src/: lib.rs
rust/crates/omena-bridge/: Cargo.toml  README.md
rust/crates/omena-bridge/src/: lib.rs  promotion_evidence.rs  selector_references.rs  source_evidence.rs
rust/crates/omena-incremental/: Cargo.toml  README.md
rust/crates/omena-incremental/src/: lib.rs
rust/crates/omena-lsp-server/: Cargo.toml
rust/crates/omena-lsp-server/src/: lib.rs
rust/crates/omena-query/: Cargo.toml  README.md
rust/crates/omena-query/src/: lib.rs
rust/crates/omena-resolver/: Cargo.toml  README.md
rust/crates/omena-resolver/src/: lib.rs
rust/crates/omena-semantic/: Cargo.toml  README.md
rust/crates/omena-semantic/src/: design_tokens.rs  evidence.rs  lib.rs  lossless_cst.rs  observation.rs  selector_identity.rs  selector_references.rs  source_evidence.rs
rust/crates/omena-tsgo-client/: Cargo.toml  README.md
rust/crates/omena-tsgo-client/src/: lib.rs
rust/external-consumers/engine-input-producers-git-consumer/: Cargo.toml
rust/external-consumers/engine-input-producers-git-consumer/src/: lib.rs
rust/external-consumers/engine-style-parser-git-consumer/: Cargo.toml
rust/external-consumers/engine-style-parser-git-consumer/src/: lib.rs
rust/external-consumers/omena-abstract-value-git-consumer/: Cargo.toml
rust/external-consumers/omena-abstract-value-git-consumer/src/: lib.rs
rust/external-consumers/omena-bridge-git-consumer/: Cargo.toml
rust/external-consumers/omena-bridge-git-consumer/src/: lib.rs
rust/external-consumers/omena-query-git-consumer/: Cargo.toml
rust/external-consumers/omena-query-git-consumer/src/: lib.rs
rust/external-consumers/omena-resolver-git-consumer/: Cargo.toml
rust/external-consumers/omena-resolver-git-consumer/src/: lib.rs
rust/external-consumers/omena-semantic-consumer/: Cargo.toml
rust/external-consumers/omena-semantic-consumer/src/: lib.rs
rust/external-consumers/omena-semantic-git-consumer/: Cargo.toml
rust/external-consumers/omena-semantic-git-consumer/src/: lib.rs
scripts/: check-backend-typecheck-smoke.ts  check-contract-parity-golden.ts  check-contract-parity-smoke.ts  check-contract-parity-v1-golden.ts  check-contract-parity-v1-smoke.ts  check-contract-parity-v2-golden.ts  check-contract-parity-v2-smoke.ts  check-engine-shadow-runner-daemon.mjs  check-eslint-plugin-smoke.ts  check-lsp-runtime-loop.ts  check-lsp-server-smoke.ts  check-packaged-engine-shadow-runner-matrix.mjs  check-packaged-engine-shadow-runner.mjs  check-packaged-selected-query-default.ts  check-packaged-tsgo-binary.mjs  check-plugin-consumer-eslint-example.ts  check-plugin-consumer-stylelint-example.mjs  check-provider-host-routing-boundary.ts  check-real-project-corpus.ts  check-release-batch.ts  check-rust-checker-broader-lane-readiness.ts  check-rust-checker-promotion-review.ts  check-rust-checker-real-project-bounded.ts  check-rust-checker-release-gate-readiness.ts  check-rust-checker-release-gate-shadow-review.ts  check-rust-checker-source-missing-canonical-candidate.ts  check-rust-checker-source-missing-canonical-producer.ts  check-rust-checker-source-missing-consumer-boundary.ts  check-rust-checker-style-recovery-canonical-candidate.ts  check-rust-checker-style-recovery-canonical-producer.ts  check-rust-checker-style-recovery-consumer-boundary.ts  check-rust-checker-style-unused-canonical-candidate.ts  check-rust-checker-style-unused-canonical-producer.ts  check-rust-checker-style-unused-consumer-boundary.ts  check-rust-expression-domain-candidates.ts  check-rust-expression-domain-canonical-candidate.ts  check-rust-expression-domain-canonical-producer.ts  check-rust-expression-domain-compare.ts  check-rust-expression-domain-evaluator-candidates.ts  check-rust-expression-domain-flow-analysis.ts  (+109 more)
server/: package.json  tsconfig.json
server/adapter-vscode/: tsconfig.json
server/engine-core-ts/: tsconfig.json
server/lsp-server/: tsconfig.json
server/src/: composition-root.ts  diagnostics-scheduler.ts  handler-registration.ts  server-capabilities.ts  server-runtime-session.ts  server-runtime-support.ts  server.ts  settings.ts
shared/: package.json  tsconfig.json
shared/src/: index.ts  types.ts
test/_fixtures/: fake-type-resolver.ts  protocol.ts  (+7 more)
(+618 files in other folders)
