[workspace]
members = [
  "crates/engine-input-producers",
  "crates/engine-shadow-runner",
  "crates/engine-style-parser",
  "crates/omena-abstract-value",
  "crates/omena-bridge",
  "crates/omena-query",
  "crates/omena-semantic",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
