[package]
name = "engine-input-producers"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Rust input-derived producer artifacts for CSS Module Explainer EngineInputV2"
repository = "https://github.com/yongsk0066/css-module-explainer"
readme = "README.md"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
