[package]
name = "engine-shadow-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
engine-input-producers = { path = "../engine-input-producers" }
omena-bridge = { path = "../omena-bridge" }
serde.workspace = true
serde_json.workspace = true
