[package]
name = "engine-style-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Rust parser scaffold for CSS/SCSS/Less style modules"
repository = "https://github.com/yongsk0066/css-module-explainer"
readme = "README.md"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
