[package]
name = "omena-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "CME-coupled bridge crate for Omena semantic graph inputs"
repository = "https://github.com/yongsk0066/css-module-explainer"
readme = "README.md"

[lints]
workspace = true

[dependencies]
engine-input-producers = { path = "../engine-input-producers" }
engine-style-parser = { path = "../engine-style-parser" }
omena-semantic = { path = "../omena-semantic" }
serde.workspace = true
