[package]
name = "omena-incremental"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Salsa-style incremental invalidation primitives for Omena"
repository = "https://github.com/yongsk0066/css-module-explainer"
readme = "README.md"

[lints]
workspace = true

[dependencies]
serde.workspace = true
