[package]
name = "omena-query"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Omena query boundary over CME producer query fragments"
repository = "https://github.com/yongsk0066/css-module-explainer"
readme = "README.md"

[lints]
workspace = true

[dependencies]
engine-input-producers = { path = "../engine-input-producers" }
omena-abstract-value = { path = "../omena-abstract-value" }
serde.workspace = true
