[package]
name = "omena-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Omena resolver boundary over CME source-resolution producer contracts"
repository = "https://github.com/yongsk0066/css-module-explainer"
readme = "README.md"

[lints]
workspace = true

[dependencies]
engine-input-producers = { path = "../engine-input-producers" }
serde.workspace = true
