[package]
name = "omena-tsgo-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Rust tsgo client boundary for Omena source-side type facts"
repository = "https://github.com/yongsk0066/css-module-explainer"
readme = "README.md"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
