[workspace]
members = ["."]
resolver = "2"

[package]
name = "engine-input-producers-git-consumer-check"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
engine-input-producers = { package = "omena-engine-input-producers", git = "https://github.com/omenien/omena-engine-input-producers.git", rev = "997d298" }
serde_json = "1.0"
