[workspace]
members = ["."]
resolver = "2"

[package]
name = "engine-style-parser-git-consumer-check"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
engine-style-parser = { git = "https://github.com/omenien/omena-engine-style-parser.git", rev = "76d9cde" }
serde_json = "1.0"
