[workspace]
members = ["."]
resolver = "2"

[package]
name = "omena-abstract-value-git-consumer-check"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
omena-abstract-value = { git = "https://github.com/omenien/omena-abstract-value.git", rev = "cc656f8" }
serde_json = "1.0"
