[workspace]
members = ["."]
resolver = "2"

[package]
name = "omena-semantic-consumer-check"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
engine-input-producers = { path = "../../crates/engine-input-producers" }
engine-style-parser = { path = "../../crates/engine-style-parser" }
omena-semantic = { path = "../../crates/omena-semantic" }
serde_json = "1.0"
