[workspace]
members = ["."]
resolver = "2"

[package]
name = "omena-semantic-git-consumer-check"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
engine-input-producers = { package = "omena-engine-input-producers", git = "https://github.com/omenien/omena-engine-input-producers.git", rev = "9e4d29c" }
engine-style-parser = { package = "omena-engine-style-parser", git = "https://github.com/omenien/omena-engine-style-parser.git", rev = "4dcf39d" }
omena-semantic = { git = "https://github.com/omenien/omena-semantic.git", rev = "cf19026" }
serde_json = "1.0"

[patch.crates-io]
omena-engine-input-producers = { git = "https://github.com/omenien/omena-engine-input-producers.git", rev = "9e4d29c" }
omena-engine-style-parser = { git = "https://github.com/omenien/omena-engine-style-parser.git", rev = "4dcf39d" }
